Prevent overlapping text for cards/workflows
Safari was ignoring the fact that flex should be
applied and was overlapping text.

--- a/app/assets/stylesheets/components/admin-page/_card-thumbnail.scss
+++ b/app/assets/stylesheets/components/admin-page/_card-thumbnail.scss
@@ -1,6 +1,7 @@
 .admin-card-thumbnail {
   height: 100%;
   display: flex;
+  flex: 1;
   flex-direction: column;
 }
 
