--- a/app/assets/stylesheets/components/admin-page/_workflow-thumbnail.scss
+++ b/app/assets/stylesheets/components/admin-page/_workflow-thumbnail.scss
@@ -1,5 +1,6 @@
 .admin-workflow-thumbnail {
   height: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
